[workspace]
resolver = "2"
members = [
    "day3",
    "day2",
    "day1",
    "script",
    "shared"
]

# [profile.release]
# # optimization over all codebase ( better optimization, slower build )
# codegen-units = 1
# # optimization for size ( more aggressive )
# opt-level = 'z'
# # link time optimization using using whole-program analysis
# lto = true
