[workspace]
resolver = "2"
members = [
    "day21",
    "day20",
    "day19",
    "day18",
    "day17",
    "day16",
    "day15",
    "day14",
    "day13",
    "day12",
    "day11",
    "day10",
    "day9",
    "day8",
    "day7",
    "day6",
    "day5",
    "day4",
    "day3",
    "day2",
    "day1",
    "script",
    "shared",
]

# [profile.release]
# # optimization over all codebase ( better optimization, slower build )
# codegen-units = 1
# # optimization for size ( more aggressive )
# opt-level = 3
# # link time optimization using using whole-program analysis
# lto = true
